test/language/spec/debug/invalid/unknown_target.topo
// TEST: `debug X { ... }` must reject targets that are not declared types.
// EXPECT-ERROR: unknown debug target 'NoSuchType'

debug NoSuchType {
  summary "should not resolve";
}
